--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "my-invoicing-app",
   "version": "0.1.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "next dev",
     "build": "next build",
@@ -20,7 +21,7 @@
     "@radix-ui/react-icons": "^1.3.0",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
-    "@react-email/components": "^0.0.25",
+    "@react-email/components": "^0.0.33",
     "@xata.io/client": "^0.30.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,8 +33,9 @@
     "pg": "^8.12.0",
     "react": "^19.0.0-rc-206df66e-20240912",
     "react-dom": "^19.0.0-rc-206df66e-20240912",
-    "resend": "^4.0.0",
-    "stripe": "^16.12.0",
+    "resend": "^4.1.2",
+    "strip-ansi": "6",
+    "stripe": "^17.7.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7"
   },
@@ -44,8 +46,9 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "drizzle-kit": "^0.30.4",
+    "eslint": "^9.19.0",
     "postcss": "^8",
-    "react-email": "3.0.1",
+    "react-email": "^3.0.7",
     "tailwindcss": "^3.4.1",
     "tsx": "^4.19.2",
     "typescript": "^5"
